--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="top">
         <div class="top-flex">
             <div class="log-n-reg">
-                <h2 id="welcome-text"></h2>
+                <h2>Welcome</h2>
             </div>
         </div>
     </div>
@@ -273,11 +273,7 @@
         </footer>
 
     </section>
-    <!-- <script>
-        let input = prompt("What's Your Name?");
-        let output = document.getElementById("welcome-text");
-        output.innerHTML = `Welcome ${input}`;
-    </script> -->
 </body>
+
 
 </html>
