Fix HTML encoding issues and clean up document

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                             </li>
                             <li><a href="https://www.techpowerup.com/cpu-specs/ryzen-5-5500.c2756">Ryzen 5 5500</a></li>
                             <li><a href="https://www.techpowerup.com/gpu-specs/radeon-rx-6600.c3696">RX 6600</a></li>
+                            <li><a href="https://www.techpowerup.com/gpu-specs/radeon-rx-580-2048sp.c3321">RX 580 2048SP</a></li>
                             <li><a href="https://www.techpowerup.com/gpu-specs/geforce-gt-1030.c2954">GT 1030</a></li>
                         </ul>
                     </li>
@@ -135,8 +136,14 @@
                             Now</button></a>
                 </div>
                 <div class="benchmark-items">
+                    <img src="img/benchmarks/rx580.png" alt="rx 580">
+                    <h2>AMD RX 580 2048SP</h2>
+                    <a href="https://youtube.com/playlist?list=PLo8D4GeFEFBICuMkv5Xp4iaB-OLSD8saN&si=8zSu7i02yTubLCwA"><button>Watch
+                            Now</button></a>
+                </div>
+                <div class="benchmark-items">
                     <img src="img/benchmarks/gt1030.png" alt="gt 1030">
-                    <h2>NVIDIA GT 1030</h2>
+                    <h2>NVIDIA GT 1030 GDDR5</h2>
                     <a href="https://www.youtube.com/playlist?list=PLo8D4GeFEFBL1R3QpXSnTkKQjEu6E6nyN"><button>Watch
                             Now</button></a>
                 </div>
