--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <div class="social-icons">
                         <a href="https://www.instagram.com/hfplays/"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://discord.com/users/790507566333558784"><i class="fa-brands fa-discord"></i></a>
-                        <a href="wa.me/6283874760794"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://wa.me/6283874760794"><i class="fa-brands fa-whatsapp"></i></a>
                         <a href="https://www.facebook.com/HFPlays/"><i class="fa-brands fa-facebook-messenger"></i></a>
                     </div>
                 </div>
@@ -288,3 +288,4 @@
 </body>
 
 </html>
+
